--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,12 @@
+[global]
+dataFrameSerialization="legacy"
 
+[server]
+maxUploadSize = 500
+
+[theme]
+primaryColor="#2186E1"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="#f0f2f6"
+textColor="#262730"
+font="sans serif"
