--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.20.0
 moviepy==1.0.3
 streamlit_option_menu==0.3.2
+streamlit_image_comparison==0.0.4
 opencv-python-headless==4.5.1.48
